--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "buildCommand": "next build",
-  "outputDirectory": ".next",
-  "env": {
-    "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
-    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key",
-    "NEXT_PUBLIC_ADMIN_EMAIL": "@next_public_admin_email"
-  }
+  "outputDirectory": ".next"
 }
+
